--- a/pages/password/password.wxml
+++ b/pages/password/password.wxml
@@ -1,14 +1,18 @@
 <!--设置密码-->
 <form bindsubmit="formSubmit" bindreset="formReset">
 <view  class=''>
-<view>
-    <input name="harvester" placeholder="请设置6位支付密码" type="password" />
-    <image class="" src="img/" mode="widthFix" lazy-load="false" binderror="" bindload=""></image>
-</view>
-  
-    <input name="harvester_phone_num" placeholder="请再次输入支付密码"  type="password" />
-    <view >
-       <button form-type="submit" class="btn-area" >确定</button>
-     </view>
+      <view class="password">
+          <input name="harvester" placeholder="请设置6位支付密码" type="{{typea}}" />
+          <image  src="img/u10947.png" mode="widthFix" lazy-load="false" class="no_see" wx:if="{{type1}}" bindtap="to_see" data-id="type1"></image>
+          <image  src="img/u10949.png" mode="widthFix" lazy-load="false" class="no_see" bindtap="to_nosee" data-id="type1" wx:else > </image>
+      </view>
+        <view class="repassword">
+          <input name="harvester_phone_num" placeholder="请再次输入支付密码"  type="{{typeb}}" />
+          <image  src="img/u10947.png" mode="widthFix" class="no_see" wx:if="{{type2}}"  bindtap="to_see" data-id="type2"></image>
+          <image  src="img/u10949.png" mode="widthFix" lazy-load="false" class="no_see"   bindtap="to_nosee" data-id="type2" wx:else></image>
+        </view> 
+        <view >
+            <button form-type="submit" class="btn-area" >确定</button>
+        </view>
   </view>
 </form>
