--- a/pages/password/password.wxss
+++ b/pages/password/password.wxss
@@ -9,3 +9,18 @@ input{
     color: #fff;
     background: #00BBFF;
 }
+.no_see{
+    width: 54rpx;
+    position: absolute;
+    top: 21rpx;
+    right: 23rpx;
+    z-index: 9999999;
+}
+.password{
+    position: relative;
+
+}
+.repassword{
+    position: relative;
+
+}
