--- a/pages/add_card/add_card.wxml
+++ b/pages/add_card/add_card.wxml
@@ -1,5 +1,5 @@
 <form bindsubmit="formSubmit" bindreset="formReset">
-<view  class='form_all'>
+<view  class='form_all' wx:if="{{!change}}">
         <view class='title'><text class='text_red'>*</text>添加银行卡管理:</view>
         <view class='list_a'>
         <view class="section section_top">
@@ -8,7 +8,7 @@
           </view>
           <view class="section">
             <view class="section_title">开户银行</view>
-            <input name="card_name" placeholder=" 请填写开户行及支行名称" value=""/>
+            <input name="card_name" placeholder="请填写开户行及支行名称" value=""/>
           </view>
             <view class="section section_top">
             <view class="section_title">银行卡号</view>
@@ -17,7 +17,7 @@
           <view class="section">
             <view class="section_title">验证码</view>
             <input name="harvester_phone_num" placeholder="验证码发送到您绑定的手机号" value="" class="cold_input"/>
-            <view class="send_cold"  bindtap="send_cold">获取验证码</view>
+            <view class="send_cold"  bindtap="send_cold">{{btntext}}</view>
           </view>
           </view>
         
@@ -25,4 +25,31 @@
             <button form-type="submit" class='button-hovers'>确定添加</button>
           </view>
   </view>
+<view  class='form_all' wx:else>
+        <view class='title'><text class='text_red'>*</text>添加银行卡管理:</view>
+        <view class='list_a'>
+        <view class="section section_top">
+            <view class="section_title">开户名</view>
+            <input name="name" placeholder=" 需要与绑定身份姓名一致"  value="{{card.account_name}}"/>
+          </view>
+          <view class="section">
+            <view class="section_title">开户银行</view>
+            <input name="card_name" placeholder="请填写开户行及支行名称" value="{{card.bank_name}}"/>
+          </view>
+            <view class="section section_top">
+            <view class="section_title">银行卡号</view>
+            <input name="card_num" placeholder="   请输入完整卡号"  value="{{card.bank_card}}"/>
+          </view>
+          <view class="section">
+            <view class="section_title">验证码</view>
+            <input name="harvester_phone_num" placeholder="验证码发送到您绑定的手机号" value="" class="cold_input"/>
+            <view class="send_cold"  bindtap="send_cold">{{btntext}}</view>
+          </view>
+          </view>
+        
+          <view class="btn-area">
+            <button form-type="submit" class='button-hovers'>确定修改</button>
+          </view>
+  </view>
+
 </form>
