--- a/pages/change_account/change_account.wxml
+++ b/pages/change_account/change_account.wxml
@@ -24,7 +24,7 @@
             <button form-type="submit" class='button-hovers'>保存</button>
           </view>
   </view>
-  <view  class='form_all' else>
+  <view  class='form_all' wx:else>
         <view class='title'><text class='text_red'>*</text>手机号账号绑定:</view>
         <view class='list_a'>
       
