--- a/pages/card/card.wxml
+++ b/pages/card/card.wxml
@@ -1,10 +1,10 @@
 <!--pages/card/card.wxml-->
 <!--pages/select_address/select_address.wxml-->
 <view class='all'>
-	<radio-group class="radio-group" bindchange="radioChange" wx:if="{{address.info!='没有填写地址记录'}}" >
+	<radio-group class="radio-group" bindchange="radioChange" wx:if="{{address.info!='没有填写地址记录'}}"  >
 		<view class='content_list' wx:for="{{card}}">
 			<view class='radio'>
-				<radio value="" color='#fff' />
+				<radio value="{{item.id}}" color='#fff'  checked="{{item.status==1?'true':''}}" data-id="{{item.status}}" />
 			</view>
 			  <view class="card_infor">
                 <view class="bank"><text class="bank_title">开户行：</text><text class="bank_content" >{{item.bank_name}}</text></view>
