--- a/pages/change/change.wxml
+++ b/pages/change/change.wxml
@@ -1,22 +1,16 @@
 <view>
-    <view class="list" bindtap="pic">
-        <view class="tilte_text">头像</view>
-        <view class="content" >
-            <image src="{{img}}" mode="widthFix" class="head" />
-            <image src="http://teahouse.siring.com.cn/upload/20190104/bdf9be86248db099ee1ce20018f8ad8a.png" mode="widthFix" class="more" />
-        </view>
-    </view>
+  
     <view class="list" bindtap="go_change_account">
             <view class="tilte_text"> 当前账号</view>
             <view class="content">
-                <view class="context">  139****0809</view>
+                <view class="context">{{user_phone}}</view>
                 <image src="http://teahouse.siring.com.cn/upload/20190104/bdf9be86248db099ee1ce20018f8ad8a.png" mode="widthFix" class="more" />
             </view>
         </view>
         <view class="list" bindtap="go_change_name">
                 <view class="tilte_text">昵称</view>
                 <view class="content">
-                        <view class="context">刘备</view>
+                        <view class="context">{{user_name}}</view>
                     <image src="http://teahouse.siring.com.cn/upload/20190104/bdf9be86248db099ee1ce20018f8ad8a.png" mode="widthFix" class="more" />
                 </view>
             </view>
