--- a/pages/change/change.wxml
+++ b/pages/change/change.wxml
@@ -2,8 +2,7 @@
   
     <view class="list" bindtap="go_change_account">
             <view class="tilte_text"> 当前账号</view>
-            <view class="content" data-id="{{user_phone}}">
-                <view class="context" wx:if="{{!user_phone}}" >{{user_phone}}</view>
+            <view class="content">
                 <image src="http://teahouse.siring.com.cn/upload/20190104/bdf9be86248db099ee1ce20018f8ad8a.png" mode="widthFix" class="more" />
             </view>
         </view>
