--- a/pages/integral_good_detail/integral_good_detail.wxml
+++ b/pages/integral_good_detail/integral_good_detail.wxml
@@ -2,7 +2,7 @@
 <view class='all'>
 	<view class='home_banner'>
 		<swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" circular="{{circular}}" duration="1000">
-			<block wx:for="{{goods.images}}" wx:key="{{index}}">
+			<block wx:for="{{goods.goods_show_images}}" wx:key="{{index}}">
 				<swiper-item class='swiper-item'>
 					<image src="{{url}}{{item}}" class="slide-image" />
 				</swiper-item>
@@ -53,13 +53,9 @@
 				<image src='img/u1492.png' class='footbar_ico'></image>
 				<view class='footbar_text'>分享</view>
 			</view>
-			<view class='shopping_cart'  bindtap="go_car">
-				<image src='img/u1494.png' class='footbar_ico'></image>
-				<view class='footbar_text'>购物车</view>
-			</view>
+			
 		</view>
 		<view class='trade'>
-			<view class='add-cart' bindtap="add_car"  >加入购物车</view>
 			<view class='buy' bindtap="showPopup">立即购买</view>
 		</view>
 	</view>
