--- a/pages/forget_password/forget_password.wxml
+++ b/pages/forget_password/forget_password.wxml
@@ -4,20 +4,24 @@
         <view class='list_a'>
         <view class="section section_top">
             <view class="section_title">手机号码</view>
-            <input name="harvester" placeholder="请输入手机号码"  value=""  bindchange="bindoldChange" />
+            <input name="harvester" placeholder="请输入手机号码"  value=""  bindchange="bindnewChange" />
           </view>
           <view class="section">
-            <view class="section_title">设置新的支付密码</view>
-            <input name="harvester_phone_num" placeholder="请输入登录密码" value="" bindchange="bindnewChange" />
+            <view class="section_title">新的支付密码</view>
+            <input name="harvester_phone_num" placeholder="请输入登录密码" value="" bindchange="bindoldChange" type="number" password />
+          </view>
+           <view class="section">
+            <view class="section_title">重新输入密码</view>
+            <input name="harvester_phone_num" placeholder="请重新输入登录密码" value="" bindchange="bindoldChange"  type="number" password />
           </view>
           <view class="section">
             <view class="section_title">验证码</view>
             <input name="harvester_phone_num1" placeholder="请输入验证码" value="" class="cold_input"/>
-            <view class="send_cold" bindtap="send_cold1">{{btntext}}</view>
+            <view class="send_cold" bindtap="send_cold">{{btntext}}</view>
           </view>
            <view class="section">
             <view class="section_title">身份证号</view>
-            <input name="harvester_phone_num" placeholder="请输入您的身份证号" value="" bindchange="bindnewChanges" />
+            <input name="harvester_phone_num2" placeholder="请输入您的身份证号" value=""  />
           </view>
           </view>
          
