--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -136,7 +136,7 @@
 				<view class='box_list_four'>
 					<view>
 						<view class='cancel type_button'>售后</view>
-						<view class='payment' bindtap="go_evaluation" data-id="{{item.parts_order_number}}">追加评价</view>
+						<view class='payment' bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">追加评价</view>
 					</view>
 				</view>
 			</view>
