--- a/pages/select_save_address/select_save_address.wxml
+++ b/pages/select_save_address/select_save_address.wxml
@@ -23,5 +23,5 @@
      </view>
       </radio-group>
  
-    <view class='add_address' bindtap='add_address'>新增收货地址</view>
+   <!--<view class='add_address' bindtap='add_address'>新增收货地址</view>-->
   </view>
