--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -87,7 +87,7 @@
 			</radio-group>
 		</view>
 		<view>
-			<view class="direct_mail {{selected?'show':'hidden'}}">
+			<view class="direct_mail {{selected?'show':'hidden'}}"  bindtap='go_direct_mail_address'>
 				<view class='direct_mail_infor_all'>
 					<view class='direct_mail_infor'>
 						<text>{{tel}} </text>
@@ -100,7 +100,7 @@
 					<image src='img/u1959.png'></image>
 				</view>
 			</view>
-			<view class="direct_mail {{selected1?'show':'hidden'}}">
+			<view class="direct_mail {{selected1?'show':'hidden'}}" bindtap='go_shop_address'>
 				<view class='direct_mail_infor_all'>
 					<view class='direct_mail_infor'>
 						<text>北京市01店 </text>
@@ -108,11 +108,11 @@
 					</view>
 					<view class='direct_mail_add'>北京市朝阳区天鹅湾小区5号楼3单元201</view>
 				</view>
-				<view class='more_img' bindtap='go_shop_address'>
+				<view class='more_img' >
 					<image src='img/u1959.png'></image>
 				</view>
 			</view>
-			<view class="direct_mail {{selected2?'show':'hidden'}}">
+			<view class="direct_mail {{selected2?'show':'hidden'}}"  bindtap='go_save_tea'>
 				<view wx:if="{{warehouse}}" class='select_box'>
 					<view class='direct_mail_infor_all'>
 						<view class='direct_mail_infor'>
@@ -122,7 +122,7 @@
 						<view class='direct_mail_add'>仓储地址:北京市朝阳区天鹅湾小区5号楼3单元201</view>
 						<view class='direct_mail_add'>仓储费标准:¥0.1/片/天</view>
 					</view>
-					<view class='more_img' bindtap='go_save_tea'>
+					<view class='more_img'>
 						<image src='img/u1959.png'></image>
 					</view>
 				</view>
@@ -133,11 +133,35 @@
 
 		</view>
 	</view>
+		<view class="is_insurance {{selected2?'show':'hidden'}}">
+			<view class='is_invoice'>
+				<label class="checkbox">
+						<checkbox value="选择仓储保险" />选择仓储保险
+				</label>
+				<image class="tips_img" src="img/u927.png" mode="widthFix" >	</image>
+				<view class="" class="tips_content"  >*可选项，默认1年</view>
+			</view>
+		<view class='go_invoice_information'>
+			<view>
+				选择仓储年限
+			</view>
+	    <!--<view class='more_imgs' bindtap="powerDrawer" data-statu="open">
+				<image src='img/u1959.png' mode="scaleToFill"></image>
+			</view>-->
+					<view class='select_quantity'>
+			   <view class='subtract' bindtap="bindMinus1">-</view>
+               <view class='num'><input type="number" placeholder=""  value="{{num1}}" /></view>
+			   <view class='add'  bindtap="bindPlus1">+</view>
+			</view>
+		</view>
+	</view>
 	<view class="is_insurance {{selected2?'show':'hidden'}}">
 		<view class='is_invoice'>
 			<label class="checkbox">
                   <checkbox value="选择仓储保险" />选择仓储保险
               </label>
+									<image class="tips_img" src="img/u927.png" mode="widthFix" >	</image>
+				<view class="" class="tips_content"  >*可选项，默认1年</view>
 			<view class='invoice_money text_red'>
 				¥ 0.00
 			</view>
@@ -146,13 +170,17 @@
 			<view>
 				请选择保险年限
 			</view>
-			<view class='more_imgs' bindtap="powerDrawer" data-statu="open">
+		 <!--	<view class='more_imgs' bindtap="powerDrawer" data-statu="open">
 				<image src='img/u1959.png' mode="scaleToFill"></image>
+			</view>-->
+					<view class='select_quantity'>
+			   <view class='subtract' bindtap="bindMinus2">-</view>
+               <view class='num'><input type="number" placeholder=""  value="{{num2}}" /></view>
+			   <view class='add'  bindtap="bindPlus2">+</view>
 			</view>
 		</view>
 	</view>
-	<view>
-	</view>
+
 	<view class='invoice'>
 		<view class='is_invoice'>
 			<label class="checkbox">
@@ -171,8 +199,7 @@
 			</view>
 		</view>
 	</view>
-	<view>
-	</view>
+	
 	<view class='sundry'>
 
 		<view class='sundry-li' style=' border-bottom: solid 1rpx #E4E4E4;'>
