--- a/pages/integral_settlement/integral_settlement.wxml
+++ b/pages/integral_settlement/integral_settlement.wxml
@@ -19,50 +19,35 @@
         <input class='input_control' password type='number' focus='{{payFocus}}' bindinput='inputPwd' maxlength='6'/>
     </view>
 </view>
-<!--content-->
-<!--使用animation属性指定需要执行的动画-->
-<view animation="{{animationData}}" class="drawer_box" wx:if="{{showModalStatus}}">
- 
-  <!--drawer content-->
-  <view class="drawer_title">提示</view>
-  <view class="drawer_content">
-   <view class='tip'>请选择年限</view>
-     <view class='calculate'>
-     <view class='subtract' bindtap="bindMinus">-</view>
-     <input type='text' value='{{num}}' class='calculate_text' ></input>
-     <view class='add' bindtap="bindPlus">+</view>
-     </view>
-  </view>
-  <view class="btn_ok" bindtap="powerDrawer" data-statu="close">确定</view>
-</view>
+
 
 <!-- 弹窗 -->
-<view class='all'>
+<view class='all' style="height:{{s_height}}px;">
 	<view class='titles'>
 		购物清单
 	</view>
-	<view wx:for="{{goods}}" class='good_list'>
+	<view  class='good_list'>
 		<view class='order-goods-info'>
 			<view class='order-goods-img'>
 				<image src='img/u852.png' mode="scaleToFill"></image>
 			</view>
 			<view class='order-info-box'>
-				<view class='order-info-title'>{{item.goods_info.goods_name}}</view>
-				<view class='order-goods-p'>{{item.goods_info.goods_selling}}</view>
+				<view class='order-info-title'>{{goods.goods_name}}</view>
+				<view class='order-goods-p'>{{goods.goods_selling}}</view>
 				<view class='unit-price-quantity'>
 					<view class='unit-price'>
 						<view class='unit-price-img'>
 							<image src='img/u216.png' mode="scaleToFill"></image>
 						</view>
 
-						<view class='unit-price-p text_red' wx:if="{{item.goods_info.goods_standard==0}}"> ￥{{item.grade_price}}/片</view>
-						<view class='unit-price-p text_red' wx:else> ￥{{item.grade_price}}/片</view>
+						<view class='unit-price-p text_red' wx:if="{{goods.goods_standard==0}}"> ￥{{goods.grade_price}}/片</view>
+						<view class='unit-price-p text_red' wx:else> ￥{{goods.integral}}/片</view>
 					</view>
 					<view class='quantity-p text_red'>×{{num}}</view>
 				</view>
 			</view>	
 		</view>
-	    <view class='quantity' wx:if="{{isnum}}">
+	    <view class='quantity' >
 	    	<view class='purchase_quantity'>购买数量</view>
 			<view class='select_quantity'>
 			   <view class='subtract' bindtap="bindMinus">-</view>
@@ -81,9 +66,7 @@
 				<label class="radio">
               <radio value="到店自提"  color='#fff'/><text class='text_radio'>到店自提</text>
            </label>
-				<label class="radio">
-              <radio value="选择存茶"  color='#fff'/><text class='text_radio'>选择存茶</text>
-            </label>
+			
 			</radio-group>
 		</view>
 		<view>
@@ -112,121 +95,21 @@
 					<image src='img/u1959.png'></image>
 				</view>
 			</view>
-			<view class="direct_mail {{selected2?'show':'hidden'}}"  bindtap='go_save_tea'>
-				<view wx:if="{{warehouse}}" class='select_box'>
-					<view class='direct_mail_infor_all'>
-						<view class='direct_mail_infor'>
-							<text>仓储编号:BJ02 </text>
-							<text> 属性:整件仓储</text>
-						</view>
-						<view class='direct_mail_add'>仓储地址:北京市朝阳区天鹅湾小区5号楼3单元201</view>
-						<view class='direct_mail_add'>仓储费标准:¥0.1/片/天</view>
-					</view>
-					<view class='more_img'>
-						<image src='img/u1959.png'></image>
-					</view>
-				</view>
-				<view wx:else class='no_select_box'>
-					请选择存茶仓库
-				</view>
-			</view>
+			
 
 		</view>
 	</view>
-		<view class="is_insurance {{selected2?'show':'hidden'}}">
-			<view class='is_invoice'>
-				<label class="checkbox">
-						<checkbox value="选择仓储保险" />选择仓储保险
-				</label>
-				<image class="tips_img" src="img/u927.png" mode="widthFix" >	</image>
-				<view class="" class="tips_content"  >*可选项，默认1年</view>
-			</view>
-		<view class='go_invoice_information'>
-			<view>
-				选择仓储年限
-			</view>
-	    <!--<view class='more_imgs' bindtap="powerDrawer" data-statu="open">
-				<image src='img/u1959.png' mode="scaleToFill"></image>
-			</view>-->
-					<view class='select_quantity'>
-			   <view class='subtract' bindtap="bindMinus1">-</view>
-               <view class='num'><input type="number" placeholder=""  value="{{num1}}" /></view>
-			   <view class='add'  bindtap="bindPlus1">+</view>
-			</view>
-		</view>
-	</view>
-	<view class="is_insurance {{selected2?'show':'hidden'}}">
-		<view class='is_invoice'>
-			<label class="checkbox">
-                  <checkbox value="选择仓储保险" />选择仓储保险
-              </label>
-									<image class="tips_img" src="img/u927.png" mode="widthFix" >	</image>
-				<view class="" class="tips_content"  >*可选项，默认1年</view>
-			<view class='invoice_money text_red'>
-				¥ 0.00
-			</view>
-		</view>
-		<view class='go_invoice_information'>
-			<view>
-				请选择保险年限
-			</view>
-		 <!--	<view class='more_imgs' bindtap="powerDrawer" data-statu="open">
-				<image src='img/u1959.png' mode="scaleToFill"></image>
-			</view>-->
-					<view class='select_quantity'>
-			   <view class='subtract' bindtap="bindMinus2">-</view>
-               <view class='num'><input type="number" placeholder=""  value="{{num2}}" /></view>
-			   <view class='add'  bindtap="bindPlus2">+</view>
-			</view>
-		</view>
-	</view>
-
-	<view class='invoice'>
-		<view class='is_invoice'>
-			<label class="checkbox">
-                  <checkbox value="选择开具发票" />选择开具发票
-              </label>
-			<view class='invoice_money text_red'>
-				¥ 0.00
-			</view>
-		</view>
-		<view class='go_invoice_information'>
-			<view>
-				请填写发票信息
-			</view>
-			<view class='more_imgs'>
-				<image src='img/u1959.png' mode="scaleToFill"></image>
-			</view>
-		</view>
-	</view>
-	
 	<view class='sundry'>
 
 		<view class='sundry-li' style=' border-bottom: solid 1rpx #E4E4E4;'>
 			<view>商品总价</view>
 			<view><text style='color:#FF7E4A;'>{{all_money}}元</text></view>
 		</view>
-		<view class='sundry-li'>
-			<view class='text_red'>优惠券</view>
-				<view wx:if="{{coupon_show==1}}" ><text style='color:#FF7E4A;'  bindtap="">有可适用优惠券</text></view>
-			<view wx:else><text style='color:#FF7E4A;'>无可适用优惠券</text></view>
-		</view>
-		<view class='sundry-li'>
-			<view>运费</view>
-			<view><text style='color:#FF7E4A;'>10元</text></view>
-		</view>
-		<view class='sundry-li'>
-			<view>税费</view>
-			<view><text style='color:#FF7E4A;'>23元</text></view>
-		</view>
-		<view class='sundry-li'>
-			<view>仓储保险费</view>
-			<view><text style='color:#FF7E4A;'>23元</text></view>
-		</view>
+	
+		
 	</view>
   <view class="repay_box">
   <view class="moly">应付<text style='color:#7E383F;padding-left:20rpx;'>{{all_money}}元</text></view>
-	<view class='buts' bindtap='repay' wx:if="{{from_buy}}">立即支付</view>
-	<view class='buts' bindtap='buyrepay' wx:else>立即支付</view>
+	<view class='buts' bindtap='repay' >立即兑换</view>
   </view>
 </view>
