--- a/pages/withdrawal/withdrawal.wxml
+++ b/pages/withdrawal/withdrawal.wxml
@@ -1,31 +1,62 @@
 <!--pages/withdrawal/withdrawal.wxml-->
 <view class="all"> 
  <view class="content">
-        <view class="head"> 您的当前余额：￥5980</view>
-        <view class="cards_box">
+        <view class="head"> 您的当前余额：￥{{balance}}</view>
+       <!-- <view class="cards_box">
             <view class="weixin_card {{selected?'on':''}}" bindtap="ison">提现到微信</view>
             <view class="card_card {{selected1?'on':''}}" bindtap="ison2"> 提现到银行卡</view>
-        </view>
+        </view>-->
         <view class="box">
-            <view class="weixin_box" wx:if="{{weixin}}">
+            <view class="weixin_box">
 
-            <view class="limit">您当前余额可提现：10元</view>
+            <view class="limit">您当前余额可提现：{{member_recharge_money}}元</view>
             <view class="tip">温馨提示：</view>
             <view class="tip">① 您申请会员的充值余额，需用于平台消费，不能用于提现</view>
             <view class="tip">② 由于各运营方已收取相应的中间手续费用，为保障用户利益，申请提现只收取2%提现手续费；</view>
             <view class="tip">③能申请提现的余额需满1000元以上时才可申请提现；</view>
-             <view class="tip">④当天充值后余额需在7天后方可体现；</view>
-             <form class="" report-submit="false" bindsubmit="" bindreset="">
+            <view class="form">
+              <form  report-submit="false" bindsubmit="formSubmit" bindreset="">
                   <view class="form_list">
-                      <view>申请提现金额：</view>
-                      <view><input type="text"  /> </view>
+                      <view class="form_list_text">申请提现金额：</view>
+                      <input type="text"   class="form_list_input"  placeholder="请输入金额，不能小于1000" name="money" />
+                      <text class="danwei">元</text>
                  </view>
-
-             </form>
+                    <view class="form_list">
+                      <view class="form_list_text">开户名：</view>
+                      <input type="text"   class="form_list_input"  placeholder="需要与绑定身份姓名一致" name="user_name" />
+                 </view>
+                   <view class="form_list_select">
+                      <view class="form_list_text"></view>
+                     <view class="go"> 
+                         <view>选择银行卡>></view>
+                          <view>身份认证>></view>
+                     </view>
+                 </view>
+                    <view class="form_list">
+                      <view class="form_list_text">开户银行：</view>
+                      <input type="text"   class="form_list_input"  placeholder="请填写开户行及支行名称" name="bank_name"  disabled value="{{card.bank_name}}" />
+                     
+                 </view>
+                    <view class="form_list">
+                      <view class="form_list_text">银行卡号：</view>
+                      <input type="text"   class="form_list_input"  placeholder="请输入完整卡号" name="bank_card" disabled value="{{card.bank_card}}" />
+                   
+                 </view>
+                    <view class="form_list">
+                      <view class="form_list_text">验证码：</view>
+                      <input type="text"   class="form_list_input"  placeholder="验证码发送到您绑定的手机号" name="code" />
+                      <view class="send_cond">获取验证码 </view>
+                 </view>
+                  <view class="btn-area">
+                    <button form-type="submit" class='button-hovers'>提交申请</button>
+                </view>
+              </form> 
             </view>
-            <view class="card_box" wx:else>
+           
+            </view>
+             <!-- <view class="card_box" wx:else>
             22
-            </view>
+            </view>-->
         </view>
     </view>
 </view>
