--- a/pages/problement/problement.wxml
+++ b/pages/problement/problement.wxml
@@ -4,9 +4,9 @@
         <view class="img hide{{showView?'show':''}}" bindtap="onChangeShowState">
             <image src='img/u3885.png'></image>
         </view>
-        <!-- <view class="img hide{{showView?'':'show'}}" bindtap="onChangeShowState">
+        <view class="img hide{{showView?'':'show'}}" bindtap="onChangeShowState">
             <image src='img/u3885.png'></image>
-        </view> -->
+        </view>
         <scroll-view class="swiper-tab" scroll-x="true">
             <view wx:for="{{nav}}" class="bre swiper-tab-list {{item.tab==tab? 'on' : ''}}" data-current="{{item.tab}}" bindtap="tab_click">
                 {{item.name}}
