--- a/pages/withdrawal/withdrawal.wxml
+++ b/pages/withdrawal/withdrawal.wxml
@@ -28,7 +28,7 @@
                    <view class="form_list_select">
                       <view class="form_list_text"></view>
                      <view class="go"> 
-                         <view>选择银行卡>></view>
+                         <view bindtap="go_card">选择银行卡>></view>
                           <view>身份认证>></view>
                      </view>
                  </view>
