--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -8,7 +8,7 @@
       </view>
       <image src="img/seach.png"  class="seach_img" mode="widthFix" />
       <input type='text' class='seach' placeholder="请输入"></input>
-       <view style='float: left;'>
+       <view style='float: left;' bindtap="bindViewTaps">
           <view class="ma"><image  src="img/u180.png"> </image> </view>
           <view class='fangwei'>会员码</view>
       </view>
