--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -1,4 +1,27 @@
 /* pages/order/order.wxss */
+/* 顶部导航 */
+.nav{
+  display: flex;
+  margin-top: 10rpx;
+  background: #fff;
+
+}
+.nav view{
+  flex:1;
+  color:#868686;
+  text-align:center;
+  font-size:26rpx;
+  padding:10rpx;
+  line-height:60rpx;
+  
+
+}
+.this{
+  color: #fff !important;
+  background: #821006;
+  border-radius:27rpx 27rpx 0 0;
+}
+/* 顶部导航 */
 .on{
   color: #821006 !important;
   border-bottom: 1rpx #821006 solid !important;
@@ -9,11 +32,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
 }
 
 .courier{
-color: #333;
-font-size: 26rpx;
+    color: #333;
+    font-size: 26rpx;
+
 }
 .type_button{
   color: #333 !important;
