--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,9 +1,9 @@
 <view class="all" style='height:{{height}}px;'>
    <view class="nav">
-	   <view class="this"> 普通订单</view>
-	   <view class=""> 众筹订单</view>
-	   <view class=""> 众筹订单</view>
-	   <view class=""> 积分订单</view>
+	   <view class="this" bindtap="go" data-id=""> 普通订单</view>
+	   <view class="" bindtap="go"> 众筹订单</view>
+	   <view class="" bindtap="go"> 众筹订单</view>
+	   <view class="" bindtap="go"> 积分订单</view>
    </view>
 	<view class='title'>
 		<view class="title_list {{tab==1? 'on' : ''}}" data-current="1" bindtap="tab_click">全部</view>
