--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -24,7 +24,7 @@
          </swiper>
 
     </view>
-    <!-- <view class='nav-list clear'>
+    <view class='nav-list clear'>
         <view class='list list-one' wx:for="{{nav}}">
             <view class='ico nav_ico ico-one'><image src='{{item.url}}'></image></view>
             <text class='text' >{{item.text}}</text>
@@ -36,7 +36,7 @@
       <text style='color:#fff; font-size:24rpx;vertical-align:6rpx;margin-left:37rpx; float:left;'>通知：</text>
       <view class='news-text'>111111</view>
       <image src='{{close}}' class='close'></image>
-    </view> -->
+    </view> 
     <view class='goods'>
       <view class='goods-title clear'>
           <text class='goods-title-text'>商品</text>
