--- a/pages/news/news.wxml
+++ b/pages/news/news.wxml
@@ -1,54 +1,54 @@
-<view class="" bindtap="go_news_detail">
+<view class="">
   <view class="list">
-      <view class="tilte_img" >
-      <image src="img/u9279.png"  mode="widthFix" class="img"/>
-      </view>
-      <view class="new_content">
-            <view class="new_content_title">个人提醒</view>
-            <view class="new_content_content">您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善，</view>
-       </view>
-       <view class="tip_box">
-          <view class="time">7月23</view>
-          <view class="dian"></view>
-       </view>
+    <view class="tilte_img">
+      <image src="img/u9279.png" mode="widthFix" class="img" />
+    </view>
+    <view class="new_content">
+      <view class="new_content_title">个人提醒</view>
+      <view class="new_content_content">您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善，</view>
+    </view>
+    <view class="tip_box">
+      <view class="time">7月23</view>
+      <view class="dian"></view>
+    </view>
   </view>
-    <view class="list">
-      <view class="tilte_img1" >
-      <image src="img/u9268.png"  mode="widthFix" class="img1"/>
-      </view>
-      <view class="new_content">
-            <view class="new_content_title">个人提醒</view>
-            <view class="new_content_content">您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善，</view>
-       </view>
-       <view class="tip_box">
-          <view class="time">7月23</view>
-          <view class="dian"></view>
-       </view>
+  <!-- <view class="list">
+    <view class="tilte_img1">
+      <image src="img/u9268.png" mode="widthFix" class="img1" />
+    </view>
+    <view class="new_content">
+      <view class="new_content_title">个人提醒</view>
+      <view class="new_content_content">您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善，</view>
+    </view>
+    <view class="tip_box">
+      <view class="time">7月23</view>
+      <view class="dian"></view>
+    </view>
   </view>
-    <view class="list">
-      <view class="tilte_img2" >
-      <image src="img/u9241.png"  mode="widthFix" class="img2"/>
-      </view>
-      <view class="new_content">
-            <view class="new_content_title">个人提醒</view>
-            <view class="new_content_content">您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善，</view>
-       </view>
-       <view class="tip_box">
-          <view class="time">7月23</view>
-          <view class="dian"></view>
-       </view>
-  </view>
-    <view class="list">
-      <view class="tilte_img3" >
-      <image src="img/u9249.png"  mode="widthFix" class="img3"/>
-      </view>
-      <view class="new_content">
-            <view class="new_content_title">个人提醒</view>
-            <view class="new_content_content">您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善，</view>
-       </view>
-       <view class="tip_box">
-          <view class="time">7月23</view>
-          <view class="dian"></view>
-       </view>
+  <view class="list">
+    <view class="tilte_img2">
+      <image src="img/u9241.png" mode="widthFix" class="img2" />
+    </view>
+    <view class="new_content">
+      <view class="new_content_title">个人提醒</view>
+      <view class="new_content_content">您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善，</view>
+    </view>
+    <view class="tip_box">
+      <view class="time">7月23</view>
+      <view class="dian"></view>
+    </view>
+  </view> -->
+  <view class="list">
+    <view class="tilte_img3">
+      <image src="img/u9249.png" mode="widthFix" class="img3" />
+    </view>
+    <view class="new_content">
+      <view class="new_content_title">个人提醒</view>
+      <view class="new_content_content">您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善您的个人信息需要完善，</view>
+    </view>
+    <view class="tip_box">
+      <view class="time">7月23</view>
+      <view class="dian"></view>
+    </view>
   </view>
 </view>
